lab-depoymentsv.1/08-canary-deployment/istio/destination-rule.yaml
# 08-canary-deployment/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
spec:
  host: myapp
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: canary
